fixed suggestion list extra padding on empty list

--- a/src/assets/less/slect.less
+++ b/src/assets/less/slect.less
@@ -128,6 +128,9 @@
         border-top: none;
         box-sizing: border-box;
         padding: 10px 0;
+        &.empty-list {
+            padding: 5px;
+        }
         &-item {
             position: relative;
             padding: 10px 18px;
